# openai-api-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  build_cpr.sh  init.sh  pyproject.toml  run.sh
examples/: token_counter.cpp
include/: openai.h  tiktoken.h
openai/: chat.cpp  openai.cpp  tiktoken.cpp  token_counter.cpp
python/: stream.py
src/: chat.cpp  openai.cpp  openai.h
